nueva seccion del sitio

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 </section>
             </section>
         </article>
+        <section>
+            <h3>Titulo ...</h3>
+        </section>
     </section>
 </body>
 </html>
